@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-04-23T00:51:21Z",
-  "count_outdated" : 1093,
-  "uniques_outdated" : 316,
+  "timestamp" : "2024-04-24T16:13:11Z",
+  "count_outdated" : 1095,
+  "uniques_outdated" : 317,
   "count" : 1101,
   "uniques" : 319,
   "views" : [
-    {
-      "timestamp": "2024-04-10T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-04-18T00:00:00Z",
       "count": 6,
