@@ -1,12 +1,7 @@
 {
-  "count": 8,
-  "uniques": 3,
+  "count": 6,
+  "uniques": 2,
   "views": [
-    {
-      "timestamp": "2024-04-10T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
     {
       "timestamp": "2024-04-18T00:00:00Z",
       "count": 6,
